# serializer version: 1
# name: test_hx_dora_services[Dora service card]
  '''
  <div class="card-body">
                                                  <a class="btn-link mb-2" href="/company/dora-service-redirect/dora/svc1" rel="noopener" target="_blank">Coupe les cheveux</a>
                                                  <ul class="list-unstyled list-inline fs-sm">
                                                      <li class="list-inline-item">Coiffeur</li>
                                                      
                                                  </ul>
                                                  <div class="badge-group">
                                                      
                                                          <span class="badge badge-sm bg-info-lighter text-info text-uppercase text-decoration-none">A</span>
                                                      
                                                  </div>
                                              </div>
  '''
# ---
# name: test_hx_dora_services_with_address[Dora service card with address]
  '''
  <div class="card-body">
                                                  <a class="btn-link mb-2" href="/company/dora-service-redirect/dora/svc1" rel="noopener" target="_blank">Coupe les cheveux</a>
                                                  <ul class="list-unstyled list-inline fs-sm">
                                                      <li class="list-inline-item">Coiffeur</li>
                                                      
                                                          <li class="list-inline-item">
                                                              <i aria-hidden="true" class="ri ri-map-pin-2-line me-2"></i>75056 Paris
                                                          </li>
                                                      
                                                  </ul>
                                                  <div class="badge-group">
                                                      
                                                          <span class="badge badge-sm bg-info-lighter text-info text-uppercase text-decoration-none">A</span>
                                                      
                                                  </div>
                                              </div>
  '''
# ---
